# Logic

./: .gitignore  Cargo.toml  README.md  requirements.txt
.cargo/: config.toml
.github/workflows/: main.yml
cmd/constants/: main.go
cmd/for/: main.go
cmd/gobyexample/arrays/: main.go
cmd/gobyexample/functions/: main.go
cmd/gobyexample/maps/: main.go
cmd/gobyexample/slices/: main.go
cmd/gobyexample/switch/: main.go
cmd/gobyexample/variables/: main.go
cmd/hello_world/: main.go
cmd/values/: main.go
conf/: config.yaml
logic/: main.py
python/: test.py
rust/: main.rs
