[package]
name = "logic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sandbox" # приложение, где всё подряд
path = "src/bin/sandbox.rs"

[[bin]]
name = "game_guessing"
path = "src/bin/game_guessing.rs"

[[bin]]
name = "app1"
path = "src/bin/app1.rs"

[dependencies]
rand = "0.9.2"
iced = { version = "0.12", features = ["image"] } # GUI
serde = { version = "1.0", features = ["derive"] } # Библиотека для сериализации/десериализации
serde_json = "1.0" # JSON
directories = "5.0" # Для путей на macOS (~/Library/Application Support)
reqwest = { version = "0.11", features = ["json"] } # HTTP клиент

# Библиотеки для анализа данных
polars = { version = "0.52.0" } # Аналог pandas, поддержка csv

# Библиотеки для машинного обучения
linfa = { version = "0.5", features = ["ndarray"] }

# Для асинхронного программирования
tokio = { version = "1", features = ["full"] } # Асинхронный рантайм
