[package]
name = "logic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sandbox" # приложение, где всё подряд
path = "src/bin/sandbox.rs"

[[bin]]
name = "game_guessing"
path = "src/bin/game_guessing.rs"

[[bin]]
name = "zero2prod"
path = "src/bin/zero2prod.rs"

[dependencies]
actix-web = "4.12.1"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
